--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 /build
 /captures
 .externalNativeBuild
+.idea/caches/
+.idea/codeStyles/
+.idea/gradle.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.idea/sonarlint/
+.idea/vcs.xml
+
